[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
nom = "7.1.3"
clap = { version = "4.5.8", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.14"
